# vtrace

./: .gitignore  README.md  pyproject.toml
docs/: vtrace-v2-prd.md  应用场景1.md
experiments/: Dockerfile  README.md  camera_tracker.py  hand_material_associator.py  production.py  track_calibrator.py
experiments/desk_eval/: .gitignore  README.md  event_logger.py  hand_tracker.py  main.py  object_tracker.py  qr_detector.py  requirements.txt  roi_calibrator.py
scripts/: run_calibrator.bat  run_calibrator.sh  run_desk_eval.bat  run_desk_eval.sh  setup.bat  setup.sh
