[project]
name = "vtrace"
version = "0.1.0"
description = "Vision-based industrial workflow tracking system"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
desk_eval = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "pyzbar>=0.1.9",
    "numpy>=1.24.0",
    "shapely>=2.0.0",
]

[tool.uv]
default-groups = []
